src/test/error/macro.lns
macro _Test( val:int ) {
}

_Test( 1, 2 ); // error
